--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             </ul>
         </nav>
     </header>
-    <div id="logo"><h1>test4renkei<img src="images/Logo.png" alt=""></h1></div>
+    <div id="logo"><h1><img src="images/Logo.png" alt=""></h1></div>
     <div id="social-icons-top">
 			<div class="social-header">
 				<ul>
-					<li class="facebook-header"><a href="https://www.facebook.com" target="_blank"><img src="images/icon2/facebookwhite2.png" alt=""></a></li>
-					<li class="twitter-header"><a href="https://twitter.com/" target="_blank"> <img src="images/icon2/facebookwhite2.png" alt=""></a></li>
-					<li class="behance-header"><a href="http://instagram.com/" target="_blank"></a></li>
-								<li class="dribbble-header"><a href="https://soundcloud.com/"></a></li>
-								<li class="youtube-header"><a href="http://www.youtube.com/" target="_blank"></a></li>
+					<li class="facebook-header"><a href="https://www.facebook.com" target="_blank"><img src="images/icon2/facebook.png" height="32" width="32" alt=""></a></li>
+					<li class="twitter-header"><a href="https://twitter.com/" target="_blank"> <img src="images/icon2/twitter.png" height="32" width="32" alt=""></a></li>
+					<li class="instagram-header"><img src="images/icon2/instagram.png" height="32" width="32" alt=""><a href="http://instagram.com/" target="_blank"></a></li>
+								<li class="mixcloud-header"><img src="images/icon2/mixcloud.png" height="32" width="32" alt=""><a href="http://mixcloud.com/" target="_blank"><a href="https://soundcloud.com/"></a></li>
+								<li class="youtube-header"><img src="images/icon2/youtube.png" height="32" width="32" alt=""><a href="http://www.youtube.com/" target="_blank"></a></li>
 							</ul>
 						</div>
 					</div>
