--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,9 @@
     <meta name="descripition" content="">
     <title>clasiq</title>
     <!-- bootstrap -->
+    <!-- <link rel="stylesheet" href="css/sanitize.css"> -->
     <link rel="stylesheet" href="css/style.css">
+
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
     <!-- font style -->
@@ -25,7 +27,8 @@
             mode: 'fade',
             auto: false,
             infiniteLoop: false,
-            hideControlOnEnd: true
+            hideControlOnEnd: true,
+            touchEnabled: true,
         });
     });
     </script>
@@ -36,7 +39,7 @@
         <nav>
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#area01">ABOUT</a></li>
+                <li><a href="#linkabout">ABOUT</a></li>
                 <li><a href="#news">NEWS</a></li>
                 <li><a href="#schejule">SCHEJULE</a></li>
                 <li><a href="#video">VIDEO</a></li>
@@ -46,25 +49,25 @@
     </header>
     <div id="top"></div>
     <div id="logo">
-        <h1> c l a s i q </h1></div>
+        <h1>[ c l a s i q ]</h1></div>
     <div id="social-icons-top">
         <div class="social-header">
             <ul>
                 <li class="facebook-header">
-                    <a href="https://www.facebook.com" target="_blank"><img src="images/icon2/facebook.png" height="32" width="32" alt=""></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="images/icon2/facebookwhite.png" height="32" width="32" alt=""></a>
                 </li>
                 <li class="twitter-header">
-                    <a href="https://twitter.com/" target="_blank"> <img src="images/icon2/twitter.png" height="32" width="32" alt=""></a>
+                    <a href="https://twitter.com/" target="_blank"> <img src="images/icon2/twitterwhite.png" height="32" width="32" alt=""></a>
                 </li>
                 <li class="instagram-header">
-                    <a href="http://instagram.com/" target="_blank"><img src="images/icon2/instagram.png" height="32" width="32" alt="">
+                    <a href="http://instagram.com/" target="_blank"><img src="images/icon2/instagramwhite.png" height="32" width="32" alt="">
                     </a>
                 </li>
                 <li class="mixcloud-header">
-                    <a href="http://mixcloud.com/" target="_blank"><img src="images/icon2/mixcloud.png" height="32" width="32" alt=""></a>
+                    <a href="http://mixcloud.com/" target="_blank"><img src="images/icon2/mixcloudwhite.png" height="32" width="32" alt=""></a>
                 </li>
                 <li class="youtube-header">
-                    <a href="http://www.youtube.com/" target="_blank"><img src="images/icon2/youtube.png" height="32" width="32" alt="">
+                    <a href="http://www.youtube.com/" target="_blank"><img src="images/icon2/youtubewhite.png" height="32" width="32" alt="">
                     </a>
                 </li>
             </ul>
@@ -73,21 +76,29 @@
 
 
     <div class="scroll">
-        <a class="icon-scroll-down" href="#about"><span></span><span></span><span></span></a>
+        <a class="icon-scroll-down" href="#linkabout"><span></span><span></span><span></span></a>
     </div>
 
+
+<div id="linkabout"  "></div>
 
     <div id="area01">
         <section id="about">
                 <h2 class="abouth2">ABOUT</h2>
             <ul class="bxslider">
+
+
                 <li class="djs"><img src="images/djs/94.jpg" alt="" class="image1">
-                    <div id="profile">
-                        <h4><span class="profile_name">DJ Silverfox</span></h4>
+                           <div id="profile">
+                        <h4><span class="profile_name">DJ<br>Silverfox</span></h4>
                     </div>
+
+                    <div class=djs-text>
                     <p class="profile_japanese"> DJ Silverfoxは、20年以上にわたりDJの広範なネットワークに名を広げた、もはや紛れもないTOKYOナンバーワンのafter hours アンダーグラウンドDJである。 彼の音楽への情熱とスキルは人々を魅了し、ハウスミュージック界の伝説となり、現在は東京にとどまらず世界中にTOKYOアンダーグラウンドサウンドを 広げている。
                     </p>
                     <p class="profile_english">DJ Silverfox has been involved in the music and nightlife industry for over twenty years. From London, to Ibiza, Tokyo, he has developed deep relationship with music and entertainment. He has a true passion for music and it shows through every time he is behind the decks. He is unquestionably the top after-house DK in the Roppongi area of Tokyo. In 2008, after years of ruling the after-hours party scene, DJ Silverfox reached into his extensive network of Dj’s and established BeatForce to spread the Tokyo underground sound around the world.</p>
+                    </div>
+
                 </li>
                 <li class="djs"><img src="images/djs/101.jpg" alt="" class="image2">
                     <div id="profile">
@@ -107,7 +118,7 @@
                 </li>
                 <li class="djs"><img src="images/djs/99.jpg" alt="" class="image4">
                     <div id="profile">
-                        <h4><span class="profile_name">DJ Deep Ω d</span></h4>
+                        <h4><span class="profile_name">DJ<br>Deep Ω d</span></h4>
                     </div>
                     <p class="profile_japanese"> DJ Silverfoxは、20年以上にわたりDJの広範なネットワークに名を広げた、もはや紛れもないTOKYOナンバーワンのafter hours アンダーグラウンドDJである。 彼の音楽への情熱とスキルは人々を魅了し、ハウスミュージック界の伝説となり、現在は東京にとどまらず世界中にTOKYOアンダーグラウンドサウンドを 広げている。
                     </p>
@@ -118,19 +129,19 @@
     </div>
 
 
-
     <div class="area02">
         <section id="news">
-            <h2>NEWS</h2>
-            <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">
-            Tweets by houseintokyo
-            </a>
-            <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">
-            Tweets by houseintokyo
-            </a>
-            <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">
-            Tweets by houseintokyo
-            </a>
+            <h2 class="newsh2">NEWS</h2>
+            <ul class="bxslider">
+             <li class="newses" style="background-image:url(images/djtablemono.jpg);">>
+               <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです１</a>
+               <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga impedit corporis cumque, expedita porro ipsa doloremque perspiciatis ullam perferendis, incidunt. Nemo iure, magnam laudantium porro rem maiores error quam maxime architecto, officiis tempore voluptas voluptatibus tenetur aut facilis alias in accusantium. Molestias corporis similique quod, ipsum quisquam, laboriosam incidunt commodi sint, ex eaque deserunt quis cumque facere explicabo dolor iste. Et cum alias ut omnis aliquid, eligendi repudiandae at quod impedit harum, molestiae eveniet, quibusdam officiis ipsam, dolor quos ducimus consectetur tempore. Officia numquam ipsam, recusandae eveniet quis, dicta odio assumenda sed consequatur, laudantium ratione molestias qui, voluptates tempora atque architecto. Accusantium facere, vero non quisquam, iure doloremque delectus, optio consequatur tempora accusamus quas quasi consequuntur aut itaque voluptate, natus. Architecto possimus perspiciatis cupiditate repellendus iure qui aperiam dolores neque, corporis nostrum nam quidem similique vero id tempora quod maiores facere odit harum. Veritatis culpa quos ipsam ducimus inventore harum sed numquam nemo nulla hic nesciunt unde saepe vero sint est dolore, architecto quasi quod blanditiis ea, illo quo? Dignissimos sed dolorum voluptatibus perspiciatis velit, minima tenetur delectus quo ex ut reiciendis tempore, reprehenderit adipisci ea ratione nisi, inventore, numquam nihil quae quam! Assumenda aspernatur fuga cumque, excepturi error explicabo!</p></li>
+
+            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです２</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis iusto atque, cupiditate explicabo blanditiis, tempora. Ullam ipsam, aliquam labore iusto voluptatem nobis distinctio eius necessitatibus voluptas perspiciatis nihil eum repellendus nam aspernatur nostrum repellat atque, quibusdam, fuga, cupiditate maiores placeat. Aperiam minima aut sint, consequatur accusamus quibusdam animi optio nihil quo consequuntur delectus impedit ducimus sapiente quod, quaerat at corrupti autem facere, fugiat officiis a! At corrupti vitae natus! Molestias odio animi praesentium quidem delectus repudiandae quae veritatis, voluptates perferendis nisi soluta voluptate blanditiis tempora nemo fugiat explicabo aliquam quas natus, ea iste consequuntur aspernatur voluptatem vitae! Quibusdam at, tenetur repellat eius, esse quae optio, molestiae fuga eveniet nesciunt, itaque ut a voluptatum quasi. Ut rem, pariatur alias consequuntur, laboriosam earum distinctio qui! Maiores eum quisquam ex modi dolor molestiae repudiandae voluptas, optio unde at? Enim quos, commodi rerum. Atque odio sit aliquid quos vel nemo dolorum repellat, laboriosam asperiores vitae expedita ad sed quaerat. Fugit eveniet, sint suscipit quasi aliquam maiores, tempore, vitae tempora in nesciunt provident sed nostrum minus vero ab obcaecati. Iure eius, reiciendis placeat amet voluptatem quas doloribus soluta praesentium ducimus saepe quam excepturi ut, illum, aliquid nobis neque nostrum repellendus itaque. Quam ullam, recusandae sed.</p></li>
+
+            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです３</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel accusamus amet aliquid, voluptatibus dolorum ab architecto laborum expedita possimus assumenda tempore illo facilis dignissimos explicabo dicta nesciunt voluptas enim saepe officia? Sunt accusantium dolore sed dignissimos praesentium amet, tempora provident pariatur libero voluptate eius aliquid cum similique nam iure. Illum in non assumenda vitae voluptatem eum nihil, nostrum maiores amet atque architecto neque modi, quae adipisci cum quas quam. Cupiditate doloremque quo, consectetur possimus facere dolor error ipsam dolorem asperiores ad maxime, nam assumenda reiciendis ipsum est ipsa quidem voluptatibus necessitatibus libero incidunt adipisci dicta sit! Consectetur optio mollitia blanditiis sunt, consequuntur quas itaque ad modi, animi tempore eaque doloremque, perspiciatis odio minus illo nam. Quis sit adipisci sunt illum commodi quibusdam dolorum necessitatibus natus sed veniam voluptatem, exercitationem iusto ratione ab officia a est optio repellat impedit voluptas minima totam. Consequatur quo quisquam debitis excepturi at quasi illo laboriosam ut. Laborum consequuntur repellat, recusandae architecto velit, atque nulla nostrum quod minus. Cum repellat debitis provident ratione magnam similique molestias. Architecto tempore nesciunt similique. Quibusdam nobis reprehenderit voluptas, minus ipsa ut repellat necessitatibus iusto a, doloribus id, aperiam maiores error dignissimos optio assumenda voluptates praesentium quo dolores? Deleniti, eligendi, sed?</p></li>
+
+        </ul>
         </section>
     </div>
 
