スケジュール背景画像固定　slider 調整中

--- a/_resource/index.html
+++ b/_resource/index.html
@@ -32,6 +32,7 @@
         });
     });
     </script>
+
 </head>
 
 <body id="home">
@@ -47,7 +48,9 @@
             </ul>
         </nav>
     </header>
+
     <div id="top"></div>
+
     <div id="logo">
         <h1>[ c l a s i q ]</h1></div>
     <div id="social-icons-top">
@@ -80,7 +83,7 @@
     </div>
 
 
-<div id="linkabout"  "></div>
+<div id="linkabout"></div>
 
     <div id="area01">
         <section id="about">
@@ -129,27 +132,57 @@
     </div>
 
 
+
+
     <div class="area02">
-        <section id="news">
-            <h2 class="newsh2">NEWS</h2>
-            <ul class="bxslider">
-             <li class="newses" style="background-image:url(images/djtablemono.jpg);">>
-               <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです１</a>
-               <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga impedit corporis cumque, expedita porro ipsa doloremque perspiciatis ullam perferendis, incidunt. Nemo iure, magnam laudantium porro rem maiores error quam maxime architecto, officiis tempore voluptas voluptatibus tenetur aut facilis alias in accusantium. Molestias corporis similique quod, ipsum quisquam, laboriosam incidunt commodi sint, ex eaque deserunt quis cumque facere explicabo dolor iste. Et cum alias ut omnis aliquid, eligendi repudiandae at quod impedit harum, molestiae eveniet, quibusdam officiis ipsam, dolor quos ducimus consectetur tempore. Officia numquam ipsam, recusandae eveniet quis, dicta odio assumenda sed consequatur, laudantium ratione molestias qui, voluptates tempora atque architecto. Accusantium facere, vero non quisquam, iure doloremque delectus, optio consequatur tempora accusamus quas quasi consequuntur aut itaque voluptate, natus. Architecto possimus perspiciatis cupiditate repellendus iure qui aperiam dolores neque, corporis nostrum nam quidem similique vero id tempora quod maiores facere odit harum. Veritatis culpa quos ipsam ducimus inventore harum sed numquam nemo nulla hic nesciunt unde saepe vero sint est dolore, architecto quasi quod blanditiis ea, illo quo? Dignissimos sed dolorum voluptatibus perspiciatis velit, minima tenetur delectus quo ex ut reiciendis tempore, reprehenderit adipisci ea ratione nisi, inventore, numquam nihil quae quam! Assumenda aspernatur fuga cumque, excepturi error explicabo!</p></li>
-
-            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです２</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis iusto atque, cupiditate explicabo blanditiis, tempora. Ullam ipsam, aliquam labore iusto voluptatem nobis distinctio eius necessitatibus voluptas perspiciatis nihil eum repellendus nam aspernatur nostrum repellat atque, quibusdam, fuga, cupiditate maiores placeat. Aperiam minima aut sint, consequatur accusamus quibusdam animi optio nihil quo consequuntur delectus impedit ducimus sapiente quod, quaerat at corrupti autem facere, fugiat officiis a! At corrupti vitae natus! Molestias odio animi praesentium quidem delectus repudiandae quae veritatis, voluptates perferendis nisi soluta voluptate blanditiis tempora nemo fugiat explicabo aliquam quas natus, ea iste consequuntur aspernatur voluptatem vitae! Quibusdam at, tenetur repellat eius, esse quae optio, molestiae fuga eveniet nesciunt, itaque ut a voluptatum quasi. Ut rem, pariatur alias consequuntur, laboriosam earum distinctio qui! Maiores eum quisquam ex modi dolor molestiae repudiandae voluptas, optio unde at? Enim quos, commodi rerum. Atque odio sit aliquid quos vel nemo dolorum repellat, laboriosam asperiores vitae expedita ad sed quaerat. Fugit eveniet, sint suscipit quasi aliquam maiores, tempore, vitae tempora in nesciunt provident sed nostrum minus vero ab obcaecati. Iure eius, reiciendis placeat amet voluptatem quas doloribus soluta praesentium ducimus saepe quam excepturi ut, illum, aliquid nobis neque nostrum repellendus itaque. Quam ullam, recusandae sed.</p></li>
-
-            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです３</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel accusamus amet aliquid, voluptatibus dolorum ab architecto laborum expedita possimus assumenda tempore illo facilis dignissimos explicabo dicta nesciunt voluptas enim saepe officia? Sunt accusantium dolore sed dignissimos praesentium amet, tempora provident pariatur libero voluptate eius aliquid cum similique nam iure. Illum in non assumenda vitae voluptatem eum nihil, nostrum maiores amet atque architecto neque modi, quae adipisci cum quas quam. Cupiditate doloremque quo, consectetur possimus facere dolor error ipsam dolorem asperiores ad maxime, nam assumenda reiciendis ipsum est ipsa quidem voluptatibus necessitatibus libero incidunt adipisci dicta sit! Consectetur optio mollitia blanditiis sunt, consequuntur quas itaque ad modi, animi tempore eaque doloremque, perspiciatis odio minus illo nam. Quis sit adipisci sunt illum commodi quibusdam dolorum necessitatibus natus sed veniam voluptatem, exercitationem iusto ratione ab officia a est optio repellat impedit voluptas minima totam. Consequatur quo quisquam debitis excepturi at quasi illo laboriosam ut. Laborum consequuntur repellat, recusandae architecto velit, atque nulla nostrum quod minus. Cum repellat debitis provident ratione magnam similique molestias. Architecto tempore nesciunt similique. Quibusdam nobis reprehenderit voluptas, minus ipsa ut repellat necessitatibus iusto a, doloribus id, aperiam maiores error dignissimos optio assumenda voluptates praesentium quo dolores? Deleniti, eligendi, sed?</p></li>
-
-        </ul>
-        </section>
-    </div>
-
-
-
-    <div class="area03">
+     <div id="top02">
         <section id="schejule">
-            <h2>SCHEJULE</h2>
+            <h2 class="schejule">SCHEJULE</h2>
+            <ul class="bxslider">
+
+
+                <li class="tables">
+            <table style="background:transparent">
+                <thead style="background:transparent">
+                    <td class="date">DATE</td>
+                    <td class="event">EVENT</td>
+                    <td class="venue">VENUE</td>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>09/24</td>
+                        <td>Tokyo House Nation: Cesar's Birthday Bash</td>
+                        <td><a href="javascript:window.open('http://www.flow-festival.at');">The Firsthouse Roppongi</a></td>
+                    </tr>
+                    <tr>
+                        <td>07/29</td>
+                        <td>House Classique</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557');">Wallflowers</a></td>
+                    </tr>
+                    <tr>
+                        <td>07/15</td>
+                        <td>Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+                    <tr>
+                        <td>07/10</td>
+                        <td>Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+                    <tr>
+                        <td>07/07</td>
+                        <td>Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+                    <tr>
+                        <td>07/01</td>
+                        <td>Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </li>
+                        <li class="tables">
             <table>
                 <thead>
                     <td class="date">DATE</td>
@@ -189,8 +222,31 @@
                     </tr>
                 </tbody>
             </table>
+        </li>
+    </ul>
                 </section>
+                </div>
     </div>
+
+
+
+
+    <div class="area03">
+        <section id="news">
+            <h2 class="newsh2">NEWS</h2>
+            <ul class="bxslider">
+             <li class="newses" style="background-image:url(images/djtablemono.jpg);">
+               <a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです１</a>
+               <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga impedit corporis cumque, expedita porro ipsa doloremque perspiciatis ullam perferendis, incidunt. Nemo iure, magnam laudantium porro rem maiores error quam maxime architecto, officiis tempore voluptas voluptatibus tenetur aut facilis alias in accusantium. Molestias corporis similique quod, ipsum quisquam, laboriosam incidunt commodi sint, ex eaque deserunt quis cumque facere explicabo dolor iste. Et cum alias ut omnis aliquid, eligendi repudiandae at quod impedit harum, molestiae eveniet, quibusdam officiis ipsam, dolor quos ducimus consectetur tempore. Officia numquam ipsam, recusandae eveniet quis, dicta odio assumenda sed consequatur, laudantium ratione molestias qui, voluptates tempora atque architecto. Accusantium facere, vero non quisquam, iure doloremque delectus, optio consequatur tempora accusamus quas quasi consequuntur aut itaque voluptate, natus. Architecto possimus perspiciatis cupiditate repellendus iure qui aperiam dolores neque, corporis nostrum nam quidem similique vero id tempora quod maiores facere odit harum. Veritatis culpa quos ipsam ducimus inventore harum sed numquam nemo nulla hic nesciunt unde saepe vero sint est dolore, architecto quasi quod blanditiis ea, illo quo? Dignissimos sed dolorum voluptatibus perspiciatis velit, minima tenetur delectus quo ex ut reiciendis tempore, reprehenderit adipisci ea ratione nisi, inventore, numquam nihil quae quam! Assumenda aspernatur fuga cumque, excepturi error explicabo!</p></li>
+
+            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです２</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis iusto atque, cupiditate explicabo blanditiis, tempora. Ullam ipsam, aliquam labore iusto voluptatem nobis distinctio eius necessitatibus voluptas perspiciatis nihil eum repellendus nam aspernatur nostrum repellat atque, quibusdam, fuga, cupiditate maiores placeat. Aperiam minima aut sint, consequatur accusamus quibusdam animi optio nihil quo consequuntur delectus impedit ducimus sapiente quod, quaerat at corrupti autem facere, fugiat officiis a! At corrupti vitae natus! Molestias odio animi praesentium quidem delectus repudiandae quae veritatis, voluptates perferendis nisi soluta voluptate blanditiis tempora nemo fugiat explicabo aliquam quas natus, ea iste consequuntur aspernatur voluptatem vitae! Quibusdam at, tenetur repellat eius, esse quae optio, molestiae fuga eveniet nesciunt, itaque ut a voluptatum quasi. Ut rem, pariatur alias consequuntur, laboriosam earum distinctio qui! Maiores eum quisquam ex modi dolor molestiae repudiandae voluptas, optio unde at? Enim quos, commodi rerum. Atque odio sit aliquid quos vel nemo dolorum repellat, laboriosam asperiores vitae expedita ad sed quaerat. Fugit eveniet, sint suscipit quasi aliquam maiores, tempore, vitae tempora in nesciunt provident sed nostrum minus vero ab obcaecati. Iure eius, reiciendis placeat amet voluptatem quas doloribus soluta praesentium ducimus saepe quam excepturi ut, illum, aliquid nobis neque nostrum repellendus itaque. Quam ullam, recusandae sed.</p></li>
+
+            <li class="newses"><a class="twitter-timeline" data-widget-id="{widget_id}" href="https://twitter.com/houseintokyo/" data-screen-name="houseintokyo">これはニュースです３</a><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel accusamus amet aliquid, voluptatibus dolorum ab architecto laborum expedita possimus assumenda tempore illo facilis dignissimos explicabo dicta nesciunt voluptas enim saepe officia? Sunt accusantium dolore sed dignissimos praesentium amet, tempora provident pariatur libero voluptate eius aliquid cum similique nam iure. Illum in non assumenda vitae voluptatem eum nihil, nostrum maiores amet atque architecto neque modi, quae adipisci cum quas quam. Cupiditate doloremque quo, consectetur possimus facere dolor error ipsam dolorem asperiores ad maxime, nam assumenda reiciendis ipsum est ipsa quidem voluptatibus necessitatibus libero incidunt adipisci dicta sit! Consectetur optio mollitia blanditiis sunt, consequuntur quas itaque ad modi, animi tempore eaque doloremque, perspiciatis odio minus illo nam. Quis sit adipisci sunt illum commodi quibusdam dolorum necessitatibus natus sed veniam voluptatem, exercitationem iusto ratione ab officia a est optio repellat impedit voluptas minima totam. Consequatur quo quisquam debitis excepturi at quasi illo laboriosam ut. Laborum consequuntur repellat, recusandae architecto velit, atque nulla nostrum quod minus. Cum repellat debitis provident ratione magnam similique molestias. Architecto tempore nesciunt similique. Quibusdam nobis reprehenderit voluptas, minus ipsa ut repellat necessitatibus iusto a, doloribus id, aperiam maiores error dignissimos optio assumenda voluptates praesentium quo dolores? Deleniti, eligendi, sed?</p></li>
+
+        </ul>
+        </section>
+    </div>
+
 
     <div class="area04">
         <section id="video">
