--- a/_resource/index.html
+++ b/_resource/index.html
@@ -41,8 +41,9 @@
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#linkabout">ABOUT</a></li>
-                <li><a href="#news">NEWS</a></li>
-                <li><a href="#schejule">SCHEJULE</a></li>
+                <li><a href="#linkschedule">SCHEDULE</a></li>
+                <li><a href="#linknews">NEWS</a></li>
+
                 <li><a href="#video">VIDEO</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
@@ -131,58 +132,74 @@
         </section>
     </div>
 
-
-
+<div id="linkschedule"></div>
 
     <div class="area02">
      <div id="top02">
-        <section id="schejule">
-            <h2 class="schejule">SCHEJULE</h2>
-            <ul class="bxslider">
+        <section id="schedule">
+            <h2 class="schedule">SCHEDULE</h2>
 
+            <ul class="bxslider">
 
                 <li class="tables">
             <table style="background:transparent">
                 <thead style="background:transparent">
+         <!--        <p class="futuretable">future</p> -->
+         <tr>
                     <td class="date">DATE</td>
                     <td class="event">EVENT</td>
                     <td class="venue">VENUE</td>
+                    </tr>
+
                 </thead>
                 <tbody>
                     <tr>
-                        <td>09/24</td>
+                        <td>2016/09/24</td>
                         <td>Tokyo House Nation: Cesar's Birthday Bash</td>
                         <td><a href="javascript:window.open('http://www.flow-festival.at');">The Firsthouse Roppongi</a></td>
                     </tr>
                     <tr>
-                        <td>07/29</td>
+                        <td>2016/07/29</td>
                         <td>House Classique</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/15</td>
+                        <td>2016/07/15</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/10</td>
+                        <td>2016/07/10</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/07</td>
+                        <td>2016/07/07</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/01</td>
+                        <td>2016/07/01</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
+                      <tr>
+                        <td>2016/06/31</td>
+                        <td>Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+                        <tr>
+                        <td>2016/06/15</td>
+                        <td>8kome  Weekend Birthday Celebration</td>
+                        <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
+                    </tr>
+
                 </tbody>
             </table>
         </li>
+
                         <li class="tables">
+
             <table>
                 <thead>
                     <td class="date">DATE</td>
@@ -191,32 +208,32 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>09/24</td>
+                        <td>2016/09/24</td>
                         <td>Tokyo House Nation: Cesar's Birthday Bash</td>
                         <td><a href="javascript:window.open('http://www.flow-festival.at');">The Firsthouse Roppongi</a></td>
                     </tr>
                     <tr>
-                        <td>07/29</td>
+                        <td>2016/07/29</td>
                         <td>House Classique</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/15</td>
+                        <td>2016/07/15</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/15</td>
+                        <td>2016/07/15</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/15</td>
+                        <td>2016/07/15</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
                     <tr>
-                        <td>07/15</td>
+                        <td>2016/07/15</td>
                         <td>Weekend Birthday Celebration</td>
                         <td><a href="javascript:window.open('https://www.google.co.jp/maps/place/Wallflowers+BAR/@35.6585515,139.7213411,17z/data=!4m5!3m4!1s0x0:0x533b8e233693709c!8m2!3d35.658192!4d139.723557https://www.facebook.com/events/1045921708795678/');">Wallflowers</a></td>
                     </tr>
@@ -229,7 +246,7 @@
     </div>
 
 
-
+<div id="linknews"></div>
 
     <div class="area03">
         <section id="news">
