--- a/_resource/index.html
+++ b/_resource/index.html
@@ -8,6 +8,7 @@
     <meta name="descripition" content="">
     <title>clasiq</title>
     <!-- bootstrap -->
+
     <!-- <link rel="stylesheet" href="css/sanitize.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -284,16 +285,20 @@
         <section id="contact">
             <form>
                 <h2>CONTACT</h2>
+
                 <div class="form-group">
-                    <input type="name" class="form-control" placeholder="name ">
-                    <input type="email" class="form-control" placeholder="email ">
-                    <textarea name="" class="form-control" rows="5" placeholder="comments"></textarea>
+                    <p><input type="name" class="form-control" placeholder="name " ></p>
+                    <p><input type="email" class="form-control" placeholder="email "></p>
+                        <p>
+                    <textarea name="" class="form-control" rows="10" placeholder="comments"></textarea></p>
                     <button type="submit" class="btn btn-xl">submit</button>
                 </div>
             </form>
              </div>
         </section>
+    <footer>
 
+    </footer>
 </body>
 
 </html>
